# mission3/src/docs/openapi-resolved.json
@@ -25,6 +25,9 @@
       },
       {
         "name": "comment"
+      },
+      {
+        "name": "uploads"
       }
     ]
   },
@@ -778,6 +781,51 @@
           }
         }
       }
+    },
+    "/uploads/image": {
+      "post": {
+        "tags": [
+          "image"
+        ],
+        "summary": "이미지 업로드",
+        "description": "상품에 사용할 이미지를 업로드",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "업로드 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    },
+                    "imageUrl": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -828,6 +876,16 @@
             "recent",
             ""
           ],
+          "default": ""
+        }
+      },
+      "search": {
+        "name": "search",
+        "in": "query",
+        "description": "검색 키워드",
+        "required": false,
+        "schema": {
+          "type": "string",
           "default": ""
         }
       },
